--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-Hello!
+<!DOCTYPE HTML>
+<!--
+	Ethereal by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Steven Ellingson</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Wrapper -->
+					<div id="wrapper">
+
+						<!-- Panel (Banner) -->
+							<section class="panel banner right">
+								<div class="content color0 span-3-75">
+									<h1 class="major">👋 Hello, I’m Steven</h1>
+									<p>A DevOps Engineer in Madison, WI</p>
+									<ul class="actions">
+										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
+									</ul>
+								</div>
+								<div class="image span-1-75" data-position="25% 25%">
+									<img src="images/pic01.jpg" alt="" />
+								</div>
+							</section>
+
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<h2 class="major">I’m interested in ...</h2>
+									<p>Logging, deployment environments, and certain parts of the SDLC. I love being able to troubleshoot issues with concise logs and awesome looking graphs.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/pic02.jpg" alt="" />
+								</div>
+							</section>
+
+						<!-- Hobbies Panel -->
+							<section class="panel color1">
+								<div class="intro joined">
+									<h2 class="major">My hobbies are ...</h2>
+									<p>Nothing beats a good timelapse, but wildlife photography, PC hardware and gaming, random Raspberry Pi projects, videography, and 3D printing are a few of the things I like doing in my free time.</p>
+								</div>
+								<div class="inner">
+									<ul class="grid-icons three connected">
+										<li><span class="icon solid fa-crow"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon solid fa-desktop"><span class="label">Dolor</span></span></li>
+										<li><span class="icon solid fa-video"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-cube"><span class="label">Amet</span></span></li>
+										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+									</ul>
+								</div>
+							</section>
+
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">I'm a Commercial Drone Pilot</h2>
+									<p>I've been FAA Part 107 certified since 2018.</p>
+								</div>
+								<div class="image" data-position="top right">
+									<img src="images/LooksLikeWisconsin.jpg" alt="" />
+								</div>
+							</section>
+
+						<!-- Panel -->
+							<section class="panel">
+								<div class="intro color2">
+									<h2 class="major">My work ...</h2>
+									<p>I shoot Sony and use various DJI products. Probably have a timelapse on a RaspberryPi or GoPro running somewhere.</p>
+								</div>
+								<div class="gallery">
+									<div class="group span-3">
+										<a href="images/gallery/fulls/01.jpg" class="image span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02.jpg" class="image span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03.jpg" class="image span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/04.jpg" class="image span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/fulls/05.jpg" class="image span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg" class="image span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07.jpg" class="image span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08.jpg" class="image span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/09.jpg" class="image span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+								</div>
+							</section>
+
+							<!-- Contact Panel -->
+							<section class="panel color4-alt">
+								<div class="intro color4">
+									<h2 class="major">How to reach me ...</h2>
+									<p>Please feel free to contact me on LinkedIn or Github.</p>
+								</div>
+								<div class="inner columns divided">
+									<div class="span-1-5">
+										<ul class="contact-icons color4">
+											<li class="icon brands fa-github"><a href="https://github.com/SEllingson">@SEllingson</a></li>
+											<li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/stevenellingson/">@StevenEllingson</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+							
+							
+						<!-- Copyright -->
+							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
